--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "watch:semantic": "./node_modules/.bin/gulp --gulpfile src/semantic-ui/gulpfile.js --cwd src/semantic-ui/ watch",
-    "watch:local": "./node_modules/.bin/webpack-dev-server --history-api-fallback --config webpack.dev.js",
-    "watch:local:prod": "./node_modules/.bin/webpack-dev-server --history-api-fallback --config webpack.prod.js",
-    "build:semantic": "./node_modules/.bin/gulp --gulpfile src/semantic-ui/gulpfile.js --cwd src/semantic-ui/ build-assets && ./node_modules/.bin/gulp --gulpfile src/semantic-ui/gulpfile.js --cwd src/semantic-ui/ build-css",
-    "build:package": "./node_modules/.bin/webpack --progress --config webpack.prod.js",
-    "local": "./node_modules/.bin/concurrently -k \"npm run watch:semantic\" \"npm run watch:local\"",
-    "local:app": "./node_modules/.bin/webpack-dev-server --history-api-fallback --config webpack.dev.js --progress",
-    "local:prod": "./node_modules/.bin/concurrently -k \"npm run watch:semantic\" \"npm run watch:local:prod\"",
+    "watch:semantic": "$(npm bin)/gulp --gulpfile src/semantic-ui/gulpfile.js --cwd src/semantic-ui/ watch",
+    "watch:local": "$(npm bin)/webpack-dev-server --history-api-fallback --config webpack.dev.js",
+    "watch:local:prod": "$(npm bin)/webpack-dev-server --history-api-fallback --config webpack.prod.js",
+    "build:semantic": "$(npm bin)/gulp --gulpfile src/semantic-ui/gulpfile.js --cwd src/semantic-ui/ build-assets && $(npm bin)/gulp --gulpfile src/semantic-ui/gulpfile.js --cwd src/semantic-ui/ build-css",
+    "build:package": "$(npm bin)/webpack --progress --config webpack.prod.js",
+    "local": "$(npm bin)/concurrently -k \"npm run watch:semantic\" \"npm run watch:local\"",
+    "local:app": "$(npm bin)/webpack-dev-server --history-api-fallback --config webpack.dev.js --progress",
+    "local:prod": "$(npm bin)/concurrently -k \"npm run watch:semantic\" \"npm run watch:local:prod\"",
     "build": "npm run build:semantic && npm run build:package",
-    "stats": "./node_modules/.bin/webpack --config webpack.prod.js --progress --json > stats.json"
+    "stats": "$(npm bin)/webpack --config webpack.prod.js --progress --json > stats.json"
   },
   "dependencies": {
     "core-decorators": "^0.20.0",
