--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "semantic-ui-react": "^0.76.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.169.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -45,6 +46,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
+    "gulp-awspublish": "^3.3.0",
+    "gulp-help": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "run-sequence": "^2.2.0",
